--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<title>About - M.R. Punja ITI</title>
+<title>About - M.R. Punja Indistrial Training Institute</title>
 </head>
 <body>
 
 <header>
-<h1>About M.R. Punja ITI</h1>
+<h1>About M.R. Punja Indistrial Training Institute</h1>
 </header>
 
 <nav>
@@ -19,7 +19,7 @@
 
 <div class="section">
 <p>
-M.R. Punja ITI is a reputed Industrial Training Institute
+M.R. Punja Indistrial Training Institute is a reputed Industrial Training Institute
 located at Tapovana, Thokur.
 We are affiliated under NCVT and NSQF Level 3.5.
 </p>
@@ -30,4 +30,5 @@ Tapovana, Thokur – 574146
 </footer>
 
 </body>
+
 </html>
