--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>M. R. Punja ITI</title>
+    <title>MULKI RAMAKRISHNA PUNJA Indistrial Training Institute</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,4 +38,5 @@
 </footer>
 
 </body>
+
 </html>
