--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <header>
-    <h1>M. R. Punja ITI</h1>
+    <h1>MULKI RAMAKRISHNA PUNJA Indistrial Training Institute</h1>
     <p>Tapovana, Thokur – 574146</p>
 </header>
 
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
