--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <body>
 
 <header>
-<h1>About M.R. Punja Indistrial Training institute</h1>
+<h1>About M.R. Punja Indistrial Training Institute</h1>
 </header>
 
 <nav>
@@ -32,4 +32,5 @@ Tapovana, Thokur – 574146
 </body>
 
 </html>
+
 
